tests/integrations/snapshots/integrations__exit_code_task_nonzero_exit@status_code.snap
---
source: tests/integrations/main.rs
description: Should exit with a code indicating a task exited with an unsuccessful exit code.
---
Some(
    1,
)
