tests/integrations/snapshots/integrations__exit_code_task_nonzero_exit@stderr.snap
---
source: tests/integrations/main.rs
description: Should exit with a code indicating a task exited with an unsuccessful exit code.
---
Errors:
╰─► failed to run the graph
    ╰─► one or more tasks failed
        ╰─► task `task` failed
            ╰─► exit status: 7
