tests/integrations/snapshots/integrations__exit_code_task_nonzero_exit@stdout.snap
---
source: tests/integrations/main.rs
description: Should exit with a code indicating a task exited with a nonzero and unignored exit code.
---
            ╭─┬◀ starting
group::task │O│ goodbye world
            ╰─┴▶ failure
