tests/integrations/snapshots/integrations__four_tasks_graph@stdout.snap
---
source: tests/integrations/main.rs
description: Should exit sucessfully after deterministically printing a graphviz dot representation of the Engage file.
---
digraph {
    0 [ label = "a" ]
    1 [ label = "b" ]
    2 [ label = "c" ]
    3 [ label = "d" ]
}
