tests/integrations/snapshots/integrations__four_tasks_two_groups_graph@status_code.snap
---
source: tests/integrations/main.rs
description: Should exit sucessfully after deterministically printing a graphviz dot representation of the Engage file.
---
Some(
    0,
)
