tests/integrations/snapshots/integrations__four_tasks_two_groups_graph@stderr.snap
---
source: tests/integrations/main.rs
description: Should exit sucessfully after deterministically printing a graphviz dot representation of the engage file.
---

