tests/integrations/snapshots/integrations__four_tasks_two_groups_graph_with_deps@stderr.snap
---
source: tests/integrations/main.rs
description: Should exit successfully after deterministically printing a graphviz dot representation of the Engage file.
---

