tests/integrations/snapshots/integrations__four_tasks_two_groups_list@stderr.snap
---
source: tests/integrations/main.rs
description: Should exit successfully after deterministically printing a textual representation of the Engage file.
---

